--- a/TeamProject-4/my-react-app/package.json
+++ b/TeamProject-4/my-react-app/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "@react-spring/web": "^9.7.3",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-iframe": "^1.8.5",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
+    "react-spring-3d-carousel": "^1.3.4",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
