--- a/TeamProject-4/my-react-app/package.json
+++ b/TeamProject-4/my-react-app/package.json
@@ -18,9 +18,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-iframe": "^1.8.5",
-    "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
     "react-spring-3d-carousel": "^1.3.4",
+    "sass": "^1.77.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
@@ -34,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "react-router-dom": "^6.23.1",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
