--- a/TeamProject-4/my-react-app/package.json
+++ b/TeamProject-4/my-react-app/package.json
@@ -10,32 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.3",
-    "@material-tailwind/react": "^2.1.9",
-    "@react-spring/web": "^9.7.3",
     "react": "^18.2.0",
-    "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.2.1",
-    "react-iframe": "^1.8.5",
-    "react-slick": "^0.30.2",
-    "react-spring-3d-carousel": "^1.3.4",
-    "sass": "^1.77.2",
-    "slick-carousel": "^1.8.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "react-router-dom": "^6.23.1",
-    "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
 }
