--- a/TeamProject-4/my-react-app/package.json
+++ b/TeamProject-4/my-react-app/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "@react-spring/web": "^9.7.3",
+    "flowbite-react": "^0.9.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
