aggiunti file per la connesione con neon

--- a/TeamProject-4/my-react-app/.env
+++ b/TeamProject-4/my-react-app/.env
@@ -1,1 +1,6 @@
 PORT = 3001
+PGHOST='ep-shrill-lake-a2h9f28b.eu-central-1.aws.neon.tech'
+PGDATABASE='users'
+PGUSER='users_owner'
+PGPASSWORD='IZwrn1bTBU3K'
+ENDPOINT_ID='ep-shrill-lake-a2h9f28b'
