--- a/TeamProject-4/my-react-app/package.json
+++ b/TeamProject-4/my-react-app/package.json
@@ -19,6 +19,7 @@
     "express": "^4.19.2",
     "flowbite-react": "^0.9.0",
     "pg-promise": "^11.8.0",
+    "postgres": "^3.4.4",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
